--- a/ol-archive/dotnet/docs.zh-cn/master/dotnet-core/contributing.d09c5cb84aedfebcb439768c30f4d13a637536cd.zh-cn.xlf
+++ b/ol-archive/dotnet/docs.zh-cn/master/dotnet-core/contributing.d09c5cb84aedfebcb439768c30f4d13a637536cd.zh-cn.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="zh-cn">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-188fee3" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">4d5fa8592ec69d864bd9a5e6dcfde4c2036dd5c4</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">98f7ab06ef34efd9759d7b8300893a0a81ad5d7e</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\contributing.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">c9127822ff7348b4635a6aec15ac7249fe7bd1a9</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">42773058969e2a8bed3f47a412dd5a6488c3e6c2</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">80c60505891850bd8c062806b8a2c305e45f28ec</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">03e7d6d475faf86afa0a59c0b028e8561fc28ad4</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -16,11 +16,11 @@
           <source>Using the preview3 folder and sub-folders</source>
           <target state="translated">使用 preview3 文件夹和子文件夹</target>       </trans-unit>
         <trans-unit id="102" translate="yes" xml:space="preserve">
-          <source>This folder is the top-level node that matches the tools folder, but contains deltas for the .NET Core tooling Preview 3 release.</source>
-          <target state="translated">此文件夹是匹配“工具”文件夹的顶层节点，但包含 .NET Core 工具预览版 3 发布的增量。</target>       </trans-unit>
+          <source>This folder is the top-level node that matches the tools folder, but contains deltas for the .NET Core Tools RC4 release.</source>
+          <target state="translated">此文件夹是与“工具”文件夹匹配的顶层节点，但包含 .NET Core 工具 RC4 版本的增量。</target>       </trans-unit>
         <trans-unit id="103" translate="yes" xml:space="preserve">
-          <source>The goal of this separate parallel folder structure is to provide a location for the Preview 3 release related content that can be relatively easily merged into the main structure when provide version switching in the published site.</source>
-          <target state="translated">此单独的并行文件夹结构的目的是提供预览版 3 发布相关内容的位置，当在发布站点中提供版本切换时，可以相对容易地将这些内容合并到主结构中。</target>       </trans-unit>
+          <source>The goal of this separate parallel folder structure is to provide a location for the RC4 release related content that can be relatively easily merged into the main structure when provide version switching in the published site.</source>
+          <target state="translated">采用这一独立的并行文件夹结构是为了提供用于保留 RC4 版本相关内容的位置，以便在发布的网站中允许版本切换时，可以相对容易地将这些内容合并到主结构中。</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
           <source>The content under this node should be a smaller document set that represents the deltas from the Long Term Support (LTS) release and the latest current release.</source>
           <target state="translated">此节点下的内容应为较小的文档集，表示来自长期支持 (LTS) 发布和最新发布的增量。</target>       </trans-unit>
@@ -37,14 +37,14 @@
           <source>Copy the existing content into a parallel folder under this structure.</source>
           <target state="translated">将现有内容复制到此结构下的并行文件夹中。</target>       </trans-unit>
         <trans-unit id="109" translate="yes" xml:space="preserve">
-          <source>Make your changes, and add the modified file to the TOC for the Preview 3 release.</source>
-          <target state="translated">进行更改，并将修改后的文件添加到预览版 3 发布的 TOC。</target>       </trans-unit>
+          <source>Make your changes, and add the modified file to the TOC for the RC4 release.</source>
+          <target state="translated">进行更改，然后将修改后的文件添加到 RC4 版本的 TOC 中。</target>       </trans-unit>
         <trans-unit id="110" translate="yes" xml:space="preserve">
           <source>New documents</source>
           <target state="translated">新建文档</target>       </trans-unit>
         <trans-unit id="111" translate="yes" xml:space="preserve">
-          <source>Put the new document in the proper location, and add it to the TOC under the node for the Preview 3 release.</source>
-          <target state="translated">将新文档放在正确的位置，并将其添加到预览版 3 发布的节点下的 TOC。</target>       </trans-unit>
+          <source>Put the new document in the proper location, and add it to the TOC under the node for the RC4 release.</source>
+          <target state="translated">将新文档置于正确的位置上，然后将其添加到 RC4 版本节点下的 TOC 中。</target>       </trans-unit>
         <trans-unit id="112" translate="yes" xml:space="preserve">
           <source>All current release files should have the following added near the top of the topic:</source>
           <target state="translated">所有当前发布的文件应在主题顶部附近添加以下内容：</target>       </trans-unit>
