open localization: update handback repo

--- a/ol-archive/dotnet/docs.zh-tw/master/dotnet-core/dotnet-pack.90d8c99c10977f2c933409f18c7afd964508ad2b.zh-tw.xlf
+++ b/ol-archive/dotnet/docs.zh-tw/master/dotnet-core/dotnet-pack.90d8c99c10977f2c933409f18c7afd964508ad2b.zh-tw.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="zh-tw">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">03fab8ad488f4001929524298e52cafeffc45e7f</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">8e266f9b34923b0ab69140d78a20afeca00e0b7c</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tools\dotnet-pack.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">c41a2b8f64d068aeb4a4b28f85fa076a8d513ffb</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">9a96c9215d53551b300f3aef0391783fd0bc8af2</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">b4bdeef96abdbc8aef9b3de02605462ed08a683f</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">a59f306327f7e35714ebdbb6ca0c52cc2cad4e51</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -22,11 +22,11 @@
           <source>dotnet-pack, CLI, CLI command, .NET Core</source>
           <target state="translated">dotnet-pack, CLI, CLI 命令, .NET Core</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
-          <source>dotnet-pack (Tooling Preview 4)</source>
-          <target state="translated">dotnet-pack (工具 Preview 4)</target>       </trans-unit>
+          <source>dotnet-pack (.NET Core Tools RC4)</source>
+          <target state="translated">dotnet-pack (.NET Core 工具 RC4)</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
-          <source>This topic applies to Visual Studio 2017 RC - .NET Core Tools Preview 4.</source>
-          <target state="translated">此主題適用於 Visual Studio 2017 RC - .NET Core 工具 Preview 4。</target>       </trans-unit>
+          <source>This topic applies to .NET Core Tools RC4.</source>
+          <target state="translated">本主題適用於 .NET Core 工具 RC4。</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
           <source>For the .NET Core Tools Preview 2 version, see the <bpt id="p1">[</bpt>dotnet-pack<ept id="p1">](../../tools/dotnet-pack.md)</ept> topic.</source>
           <target state="translated">.NET Core 工具 Preview 2 版本，請參閱 <bpt id="p1">[</bpt>dotnet-pack<ept id="p1">](../../tools/dotnet-pack.md)</ept> 主題。</target>       </trans-unit>
