--- a/ol-archive/dotnet/docs.zh-tw/master/dotnet-core/dotnet-run.4a22dfb035b779a53bdda8b62897618cd7c36ab2.zh-tw.xlf
+++ b/ol-archive/dotnet/docs.zh-tw/master/dotnet-core/dotnet-run.4a22dfb035b779a53bdda8b62897618cd7c36ab2.zh-tw.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="zh-tw">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">066fbcd9f342233fb12599a84211675ba5b95860</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">3f9d50dcc58ad4af836a6b19d8daf7bb6bf60341</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tools\dotnet-run.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">5e0cdd32faf43abdbcafb8e202947774ac72ec30</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">4ea4d996f56e33fc2ae317417de63dd5d78b515d</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">5afe67236278c16975f1feb5f76928c60967404e</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">ebbbe2f5881dc124bb3ff82c41ac2f98256e9ecb</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -22,11 +22,11 @@
           <source>dotnet-run, CLI, CLI command, .NET Core</source>
           <target state="translated">dotnet-run, CLI, CLI 命令, .NET Core</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
-          <source>dotnet-run (Tooling Preview 4)</source>
-          <target state="translated">dotnet-run (工具 Preview 4)</target>       </trans-unit>
+          <source>dotnet-run (.NET Core Tools RC4)</source>
+          <target state="translated">dotnet-run (.NET Core 工具 RC4)</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
-          <source>This topic applies to Visual Studio 2017 RC - .NET Core Tools Preview 4.</source>
-          <target state="translated">此主題適用於 Visual Studio 2017 RC - .NET Core 工具 Preview 4。</target>       </trans-unit>
+          <source>This topic applies to .NET Core Tools RC4.</source>
+          <target state="translated">本主題適用於 .NET Core 工具 RC4。</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
           <source>For the .NET Core Tools Preview 2 version, see the <bpt id="p1">[</bpt>dotnet-run<ept id="p1">](../../tools/dotnet-run.md)</ept> topic.</source>
           <target state="translated">.NET Core 工具 Preview 2 版本，請參閱 <bpt id="p1">[</bpt>dotnet-run<ept id="p1">](../../tools/dotnet-run.md)</ept> 主題。</target>       </trans-unit>
