--- a/ol-archive/dotnet/docs.zh-tw/master/dotnet-core/layering.d5959d31e867010572042cfd402c3e40afa72bac.zh-tw.xlf
+++ b/ol-archive/dotnet/docs.zh-tw/master/dotnet-core/layering.d5959d31e867010572042cfd402c3e40afa72bac.zh-tw.xlf
@@ -2,28 +2,28 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="zh-tw">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">261af1368f9966d8f485ab9ba252f15da31e05b2</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">305d046c698ca9f7ebb5ac56387cfef00145393e</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tools\layering.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">01b6528b0db10cfeb5f021fa804defd805d58dcf</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">7af36cc8dcb1608e61a134ae45e762b254a39789</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">82d8d7f230ca69b496d3d3ea0e1bd7f81395ae6d</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">1d4fe1b39ca865269209218de945f037cf090095</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
         <trans-unit id="101" translate="yes" xml:space="preserve">
-          <source>.NET Core Command Line Tools Preview 4 Architecture | Microsoft Docs</source>
-          <target state="translated">.NET Core 命令列工具 Preview 4 架構 | Microsoft Docs</target>       </trans-unit>
+          <source>.NET Core Command Line Tools RC4 Architecture | Microsoft Docs</source>
+          <target state="translated">.NET Core 命令列工具 RC4 架構 | Microsoft Docs</target>       </trans-unit>
         <trans-unit id="102" translate="yes" xml:space="preserve">
-          <source>Preview 4 brings about certain changes to the way the overall .NET Core tools are layered.</source>
-          <target state="translated">Preview 4 提供整體 .NET Core 工具分層方式的特定變更。</target>       </trans-unit>
+          <source>RC4 brings about certain changes to the way the overall .NET Core tools are layered.</source>
+          <target state="translated">RC4 提供整體 .NET Core 工具分層方式的特定變更。</target>       </trans-unit>
         <trans-unit id="103" translate="yes" xml:space="preserve">
           <source>CLI, extensibility, custom commands, .NET Core</source>
           <target state="translated">CLI, 擴充性, 自訂命令, .NET Core</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
-          <source>High-level overview of changes in CLI Preview 4</source>
-          <target state="translated">CLI Preview 4 中變更的高階概觀</target>       </trans-unit>
+          <source>High-level overview of changes in CLI RC4</source>
+          <target state="translated">CLI RC4 中變更的高階概觀</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
           <source>This document will describe in high-level the changes that moving from <ph id="ph1">`project.json`</ph> to MSBuild and <ph id="ph2">`csproj`</ph> project system bring.</source>
           <target state="translated">此文件將以高階方式說明從 <ph id="ph1">`project.json`</ph> 改為使用 MSBuild 和 <ph id="ph2">`csproj`</ph> 專案系統帶來的變更。</target>       </trans-unit>
@@ -37,11 +37,11 @@
           <source>Moving away from project.json</source>
           <target state="translated">從 project.json 移開</target>       </trans-unit>
         <trans-unit id="109" translate="yes" xml:space="preserve">
-          <source>The biggest change in the Preview 4 tooling for .NET Core is certainly the <bpt id="p1">[</bpt>move away from project.json to csproj<ept id="p1">](https://blogs.msdn.microsoft.com/dotnet/2016/05/23/changes-to-project-json/)</ept> as the project system.</source>
-          <target state="translated">.NET Core 的 Preview 4 工具中最大的變更，絕對是將專案系統<bpt id="p1">[</bpt>從 project.json 移動到 csproj<ept id="p1">](https://blogs.msdn.microsoft.com/dotnet/2016/05/23/changes-to-project-json/)</ept>。</target>       </trans-unit>
+          <source>The biggest change in the RC4 tooling for .NET Core is certainly the <bpt id="p1">[</bpt>move away from project.json to csproj<ept id="p1">](https://blogs.msdn.microsoft.com/dotnet/2016/05/23/changes-to-project-json/)</ept> as the project system.</source>
+          <target state="translated">.NET Core 的 RC4 工具中最大的變更，絕對是將專案系統<bpt id="p1">[</bpt>從 project.json 移動到 csproj<ept id="p1">](https://blogs.msdn.microsoft.com/dotnet/2016/05/23/changes-to-project-json/)</ept>。</target>       </trans-unit>
         <trans-unit id="110" translate="yes" xml:space="preserve">
-          <source>Preview 4version of the command line tools is the first release of .NET Core command line tooling that does not contain any support for project.json.</source>
-          <target state="translated">命令列工具的 Preview 4 版本是 .NET Core 命令列工具的第一個版本，其中不包含 project.json 的任何支援。</target>       </trans-unit>
+          <source>RC4version of the command line tools is the first release of .NET Core command line tooling that does not contain any support for project.json.</source>
+          <target state="translated">命令列工具的 RC4 版本是 .NET Core 命令列工具的第一個版本，其中不包含 project.json 的任何支援。</target>       </trans-unit>
         <trans-unit id="111" translate="yes" xml:space="preserve">
           <source>That means that it cannot be used to build, run or publish project.json based applications and libraries.</source>
           <target state="translated">這表示它無法用來建置、執行或發佈以 project.json 為基礎的應用程式與程式庫。</target>       </trans-unit>
@@ -94,8 +94,8 @@
           <source>With the move to the new project system, the previous diagram changes:</source>
           <target state="translated">隨著移動到新的專案系統，之前的圖表有所變更：</target>       </trans-unit>
         <trans-unit id="128" translate="yes" xml:space="preserve">
-          <source>Preview 4 tools high-level architecture</source>
-          <target state="translated">Preview 4 工具高階架構</target>       </trans-unit>
+          <source>RC4 tools high-level architecture</source>
+          <target state="translated">RC4 工具高階架構</target>       </trans-unit>
         <trans-unit id="129" translate="yes" xml:space="preserve">
           <source>The main difference is that the CLI is not the foundational layer anymore; this role is now filled by the "shared SDK component".</source>
           <target state="translated">主要差異就是 CLI 不再是基本層；此角色現在會填入「共用的 SDK 元件」。</target>       </trans-unit>
@@ -124,8 +124,8 @@
           <source>Since these are MSBuild targets, you can also use raw MSBuild to execute them using the <bpt id="p1">[</bpt>dotnet msbuild<ept id="p1">](dotnet-msbuild.md)</ept> command.</source>
           <target state="translated">由於這些都是 MSBuild 目標，您也可以使用原始的 MSBuild 來使用 <bpt id="p1">[</bpt>dotnet msbuild<ept id="p1">](dotnet-msbuild.md)</ept> 命令執行它們。</target>       </trans-unit>
         <trans-unit id="138" translate="yes" xml:space="preserve">
-          <source>Preview 4 CLI commands</source>
-          <target state="translated">Preview 4 CLI 命令</target>       </trans-unit>
+          <source>RC4 CLI commands</source>
+          <target state="translated">RC4 CLI 命令</target>       </trans-unit>
         <trans-unit id="139" translate="yes" xml:space="preserve">
           <source>The shared SDK component means that the majority of existing CLI commands have been re-implemented as MSBuild tasks and targets.</source>
           <target state="translated">共用的 SDK 元件表示大部分現有的 CLI 命令已經重新實作為 MSBuild 工作和目標。</target>       </trans-unit>
@@ -142,8 +142,8 @@
           <source>These commands still do what you expect them to do (new up a project, build it, publish it, pack it and so on).</source>
           <target state="translated">這些命令仍然可以執行您所期望的動作 (新建專案、建置專案、發行專案、封裝專案等)。</target>       </trans-unit>
         <trans-unit id="144" translate="yes" xml:space="preserve">
-          <source>Majority of the options are not changed, and are still there, and you can consult either the commands' help screens (using <ph id="ph1">`dotent &lt;command&gt; --help`</ph>) or Preview 4 documentation on this site to get familiar with any changes.</source>
-          <target state="translated">大部分的選項都沒有變更，且仍然存在，而您可以查閱命令的說明畫面 (使用 <ph id="ph1">`dotent &lt;command&gt; --help`</ph>) 或此網站上的 Preview 4 文件，以熟悉任何變更。</target>       </trans-unit>
+          <source>Majority of the options are not changed, and are still there, and you can consult either the commands' help screens (using <ph id="ph1">`dotent &lt;command&gt; --help`</ph>) or RC4 documentation on this site to get familiar with any changes.</source>
+          <target state="translated">大部分的選項都沒有變更，且仍然存在，而您可以查閱命令的說明畫面 (使用 <ph id="ph1">`dotent &lt;command&gt; --help`</ph>) 或此網站上的 RC4 文件，以熟悉任何變更。</target>       </trans-unit>
         <trans-unit id="145" translate="yes" xml:space="preserve">
           <source>From an execution perspective, the CLI commands will take their parameters and construct a call to "raw" MSBuild that will set the needed properties and run the desired target.</source>
           <target state="translated">從執行觀點而言，CLI 命令會接受輸入參數並建構對「原始」MSBuild 的呼叫，這會設定所需的屬性，並執行所需的目標。</target>       </trans-unit>
@@ -163,11 +163,11 @@
           <source>Conclusion</source>
           <target state="translated">結論</target>       </trans-unit>
         <trans-unit id="151" translate="yes" xml:space="preserve">
-          <source>This document outlined at a high-level the changes that are happening to the overall CLI tooling architecture and functioning that are coming with Preview 4.</source>
-          <target state="translated">此文件概述 Preview 4 隨附之整體 CLI 工具架構以及運作所發生的高階變更。</target>       </trans-unit>
+          <source>This document outlined at a high-level the changes that are happening to the overall CLI tooling architecture and functioning that are coming with RC4.</source>
+          <target state="translated">此文件概述 RC4 隨附之整體 CLI 工具架構以及運作所發生的高階變更。</target>       </trans-unit>
         <trans-unit id="152" translate="yes" xml:space="preserve">
-          <source>It has introduced the notion of the shared SDK component as well as explained how the CLI commands function, from a technical perspective, in Preview 4.</source>
-          <target state="translated">它從技術觀點介紹了 Preview 4 中共用的 SDK 元件的概念，以及說明 CLI 功能運作的方式。</target>       </trans-unit>
+          <source>It has introduced the notion of the shared SDK component as well as explained how the CLI commands function, from a technical perspective, in RC4.</source>
+          <target state="translated">它從技術觀點介紹了 RC4 中共用的 SDK 元件的概念，以及說明 CLI 功能運作的方式。</target>       </trans-unit>
       </group>
     </body>
   </file>
