--- a/ol-archive/dotnet/docs.zh-tw/master/dotnet-core/using-on-windows.6f63d31d24f569b9ee467193932149ce1f2af726.zh-tw.xlf
+++ b/ol-archive/dotnet/docs.zh-tw/master/dotnet-core/using-on-windows.6f63d31d24f569b9ee467193932149ce1f2af726.zh-tw.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="zh-tw">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-bf14093" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">446ada6d325a81f9c0078e4771866d99af341aed</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">29019587d2d847c5184d07024fa763c8af805d50</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\tutorials\using-on-windows.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">903822ba8f6ffa91c84b86ddd9ff49358dfc05f9</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">3ebb718800324b1d326f84d3d2305df2d902c5cf</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">4d61bc55ed956e2743f167346b240c4f7eaec716</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">fa732939c3e3148c7b7fb4511742fd9177e486a2</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -28,8 +28,8 @@
           <source>This topic applies to Visual Studio 2015 - .NET Core Tools Preview 2.</source>
           <target state="translated">此主題適用於 Visual Studio 2015 - .NET Core 工具 Preview 2。</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
-          <source>For the Visual Studio 2017 RC - .NET Core Tools Preview 4 version, see the <bpt id="p1">[</bpt>Getting started with .NET Core on Windows, using Visual Studio 2017<ept id="p1">](../preview3/tutorials/using-on-windows-vs-2017.md)</ept> topic.</source>
-          <target state="translated">Visual Studio 2017 RC - .NET Core 工具 Preview 4 版本，請參閱<bpt id="p1">[</bpt>使用 Visual Studio 2017 在 Windows 上開始使用 .NET Core<ept id="p1">](../preview3/tutorials/using-on-windows-vs-2017.md)</ept> 主題。</target>       </trans-unit>
+          <source>For the.NET Core Tools RC4 version, see the <bpt id="p1">[</bpt>Getting started with .NET Core on Windows, using Visual Studio 2017<ept id="p1">](../preview3/tutorials/using-on-windows-vs-2017.md)</ept> topic.</source>
+          <target state="translated">.NET Core 工具 RC4 版本，請參閱<bpt id="p1">[</bpt>使用 Visual Studio 2017 在 Windows 上開始使用 .NET Core<ept id="p1">](../preview3/tutorials/using-on-windows-vs-2017.md)</ept> 主題。</target>       </trans-unit>
         <trans-unit id="107" translate="yes" xml:space="preserve">
           <source>Visual Studio 2015 provides a full-featured development environment for developing .NET Core applications.</source>
           <target state="translated">Visual Studio 2015 提供功能完整的開發環境來開發 .NET Core 應用程式。</target>       </trans-unit>
