--- a/ol-archive/dotnet/docs.zh-tw/master/dotnet-core/using-with-xplat-cli-msbuild.aa34c5f9c158bf8119e47e7ddb734c84d85be785.zh-tw.xlf
+++ b/ol-archive/dotnet/docs.zh-tw/master/dotnet-core/using-with-xplat-cli-msbuild.aa34c5f9c158bf8119e47e7ddb734c84d85be785.zh-tw.xlf
@@ -2,19 +2,19 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="zh-tw">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">e84012937be6ede9170dde7ff88575d2f4fa1052</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">4c17da61f492e17edf4d69d79be430ead3dd0cc6</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tutorials\using-with-xplat-cli-msbuild.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">fe69f6ce5230af24d0ba355c430f1008cc470710</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">f19b6664b43b2daa42b5df3c9238a96516955e11</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">bcbfbf9c4088dc5a89fe219799654631a705b1e1</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">53eec76e487f494b2b5aa4b5c1366e39a90e382d</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
         <trans-unit id="101" translate="yes" xml:space="preserve">
-          <source>Getting started with .NET Core on Windows/Linux/macOS using the command line (SDK Preview 4) | Microsoft Docs</source>
-          <target state="translated">使用命令列在 Windows/Linux/macOS 上開始使用 .NET Core (SDK Preview 4) | Microsoft Docs</target>       </trans-unit>
+          <source>Getting started with .NET Core on Windows/Linux/macOS using the command line (.NET Core Tools RC4) | Microsoft Docs</source>
+          <target state="translated">使用命令列在 Windows/Linux/macOS 上開始使用 .NET Core (.NET Core 工具 RC4) | Microsoft Docs</target>       </trans-unit>
         <trans-unit id="102" translate="yes" xml:space="preserve">
           <source>Getting started with .NET Core on Windows, Linux, or macOS using the .NET Core command line interface (CLI)</source>
           <target state="translated">使用 .NET Core 命令列介面 (CLI) 在 Windows、Linux 或 macOS 上開始使用 .NET Core</target>       </trans-unit>
@@ -22,11 +22,11 @@
           <source>.NET, .NET Core</source>
           <target state="translated">.NET、.NET Core</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
-          <source>Getting started with .NET Core on Windows/Linux/macOS using the command line (Tooling Preview 4)</source>
-          <target state="translated">使用命令列在 Windows/Linux/macOS 上開始使用 .NET Core (工具 Preview 4)</target>       </trans-unit>
+          <source>Getting started with .NET Core on Windows/Linux/macOS using the command line (.NET Core Tools RC4)</source>
+          <target state="translated">使用命令列在 Windows/Linux/macOS 上開始使用 .NET Core (.NET Core 工具 RC4)</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
-          <source>This topic applies to Visual Studio 2017 RC - .NET Core Tools Preview 4.</source>
-          <target state="translated">此主題適用於 Visual Studio 2017 RC - .NET Core 工具 Preview 4。</target>       </trans-unit>
+          <source>This topic applies to .NET Core Tools RC4.</source>
+          <target state="translated">本主題適用於 .NET Core 工具 RC4。</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
           <source>For the .NET Core Tools Preview 2 version, see the <bpt id="p1">[</bpt>Getting started with .NET Core on Windows/Linux/macOS using the command line<ept id="p1">](../../tutorials/using-with-xplat-cli.md)</ept> topic.</source>
           <target state="translated">.NET Core 工具 Preview 2 版本，請參閱<bpt id="p1">[</bpt>使用命令列在 Windows/Linux/macOS 上開始使用 .NET Core<ept id="p1">](../../tutorials/using-with-xplat-cli.md)</ept> 主題。</target>       </trans-unit>
@@ -46,8 +46,8 @@
           <source>Prerequisites</source>
           <target state="translated">必要條件</target>       </trans-unit>
         <trans-unit id="112" translate="yes" xml:space="preserve">
-          <source>Before you begin, ensure you have <bpt id="p1">[</bpt>.NET Core CLI tooling Preview 4 or later<ept id="p1">](https://github.com/dotnet/core/blob/master/release-notes/preview3-download.md)</ept>.</source>
-          <target state="translated">開始之前，請確定您有<bpt id="p1">[</bpt>最新的 .NET Core CLI 工具 Preview 4 或更新版本<ept id="p1">](https://github.com/dotnet/core/blob/master/release-notes/preview3-download.md)</ept>。</target>       </trans-unit>
+          <source>Before you begin, ensure you have <bpt id="p1">[</bpt>.NET Core CLI tooling RC4 or later<ept id="p1">](https://github.com/dotnet/core/blob/master/release-notes/preview3-download.md)</ept>.</source>
+          <target state="translated">開始之前，請確定您有<bpt id="p1">[</bpt>最新的 .NET Core CLI 工具 RC4 或更新版本<ept id="p1">](https://github.com/dotnet/core/blob/master/release-notes/preview3-download.md)</ept>。</target>       </trans-unit>
         <trans-unit id="113" translate="yes" xml:space="preserve">
           <source>You'll also need a text editor.</source>
           <target state="translated">您也需要文字編輯器。</target>       </trans-unit>
@@ -250,8 +250,8 @@
           <source>The next step is to create awesome console apps of your own!</source>
           <target state="translated">下一個步驟是建立您自己的出色主控台應用程式！</target>       </trans-unit>
         <trans-unit id="180" translate="yes" xml:space="preserve">
-          <source>If a more advanced example of a console app interests you, check out the next tutorial: <bpt id="p1">[</bpt>Organizing and testing projects with the .NET Core command line (SDK Preview 4)<ept id="p1">](using-with-xplat-cli-msbuild-folders.md)</ept>.</source>
-          <target state="translated">如果您有興趣了解主控台應用程式的更進階範例，請參閱下一個教學課程︰<bpt id="p1">[</bpt>使用 .NET Core 命令列組織和測試專案 (SDK Preview 4)<ept id="p1">](using-with-xplat-cli-msbuild-folders.md)</ept>。</target>       </trans-unit>
+          <source>If a more advanced example of a console app interests you, check out the next tutorial: <bpt id="p1">[</bpt>Organizing and testing projects with the .NET Core command line (.NET Core Tools RC4)<ept id="p1">](using-with-xplat-cli-msbuild-folders.md)</ept>.</source>
+          <target state="translated">如果您有興趣了解主控台應用程式的更進階範例，請參閱下一個教學課程︰<bpt id="p1">[</bpt>使用 .NET Core 命令列組織和測試專案 (.NET Core 工具 RC4)<ept id="p1">](using-with-xplat-cli-msbuild-folders.md)</ept>。</target>       </trans-unit>
       </group>
     </body>
   </file>
