--- a/ol-archive/dotnet/docs.zh-tw/master/dotnet-core/using-with-xplat-cli-msbuild-folders.943f1e92d20f89ba65fc2676ca814526706870e3.zh-tw.xlf
+++ b/ol-archive/dotnet/docs.zh-tw/master/dotnet-core/using-with-xplat-cli-msbuild-folders.943f1e92d20f89ba65fc2676ca814526706870e3.zh-tw.xlf
@@ -2,37 +2,37 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="zh-tw">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">f3d5ebbac45726e320e5b886dbb6b81259bea36c</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">bcb5ce9772ca2f3e35ebd7ec948d011ec04296e0</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tutorials\using-with-xplat-cli-msbuild-folders.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">3a82199107f580060f75e39a93737da7a9897408</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">4071dc04fc30095307e024362d9f3cc95907f723</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">2a0c627135d005d6ec7bf60563fdd3dc0e40215d</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">4bcf08f10e0a7cdc23ef3eaa37eb96aded44eadb</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
         <trans-unit id="101" translate="yes" xml:space="preserve">
-          <source>Organizing and testing projects with the .NET Core command line (SDK Preview 4) | Microsoft Docs</source>
-          <target state="translated">使用 .NET Core 命令列組織和測試專案 (SDK Preview 4) | Microsoft Docs</target>       </trans-unit>
+          <source>Organizing and testing projects with the .NET Core command line (.NET Core Tools RC4) | Microsoft Docs</source>
+          <target state="translated">使用 .NET Core 命令列組織和測試專案 (.NET Core 工具 RC4) | Microsoft Docs</target>       </trans-unit>
         <trans-unit id="102" translate="yes" xml:space="preserve">
-          <source>Organizing and testing projects with the .NET Core command line (SDK Preview 4)</source>
-          <target state="translated">使用 .NET Core 命令列組織和測試專案 (SDK Preview 4)</target>       </trans-unit>
+          <source>Organizing and testing projects with the .NET Core command line (.NET Core Tools RC4)</source>
+          <target state="translated">使用 .NET Core 命令列組織和測試專案 (.NET Core 工具 RC4)</target>       </trans-unit>
         <trans-unit id="103" translate="yes" xml:space="preserve">
           <source>.NET, .NET Core</source>
           <target state="translated">.NET、.NET Core</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
-          <source>Organizing and testing projects with the .NET Core command line (SDK Preview 4)</source>
-          <target state="translated">使用 .NET Core 命令列組織和測試專案 (SDK Preview 4)</target>       </trans-unit>
+          <source>Organizing and testing projects with the .NET Core command line (.NET Core Tools RC4)</source>
+          <target state="translated">使用 .NET Core 命令列組織和測試專案 (.NET Core 工具 RC4)</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
-          <source>This topic applies to Visual Studio 2017 RC - .NET Core Tools Preview 4.</source>
-          <target state="translated">此主題適用於 Visual Studio 2017 RC - .NET Core 工具 Preview 4。</target>       </trans-unit>
+          <source>This topic applies to .NET Core Tools RC4.</source>
+          <target state="translated">本主題適用於 .NET Core 工具 RC4。</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
           <source>For the .NET Core Tools Preview 2 version, see the <bpt id="p1">[</bpt>Getting started with .NET Core on Windows/Linux/macOS using the command line<ept id="p1">](../../tutorials/using-with-xplat-cli.md)</ept> topic.</source>
           <target state="translated">.NET Core 工具 Preview 2 版本，請參閱<bpt id="p1">[</bpt>使用命令列在 Windows/Linux/macOS 上開始使用 .NET Core<ept id="p1">](../../tutorials/using-with-xplat-cli.md)</ept> 主題。</target>       </trans-unit>
         <trans-unit id="107" translate="yes" xml:space="preserve">
-          <source>This tutorial follows <bpt id="p1">[</bpt>Getting started with .NET Core on Windows/Linux/macOS using the command line (SDK Preview 4)<ept id="p1">](./using-with-xplat-cli-msbuild.md)</ept> to show how to go beyond simple "hello world" scenarios and pave the way for more advanced and well-organized applications.</source>
-          <target state="translated">本教學課程會遵循<bpt id="p1">[</bpt>使用命令列在 Windows/Linux/macOS 上開始使用 .NET Core (SDK Preview 4)<ept id="p1">](./using-with-xplat-cli-msbuild.md)</ept>，以示範如何超越簡單的 "hello world" 案例，並為更進階且井然有序的應用程式打好基礎。</target>       </trans-unit>
+          <source>This tutorial follows <bpt id="p1">[</bpt>Getting started with .NET Core on Windows/Linux/macOS using the command line (.NET Core Tools RC4)<ept id="p1">](./using-with-xplat-cli-msbuild.md)</ept> to show how to go beyond simple "hello world" scenarios and pave the way for more advanced and well-organized applications.</source>
+          <target state="translated">本教學課程會遵循<bpt id="p1">[</bpt>使用命令列在 Windows/Linux/macOS 上開始使用 .NET Core (.NET Core 工具 RC4)<ept id="p1">](./using-with-xplat-cli-msbuild.md)</ept>，以示範如何超越簡單的 "hello world" 案例，並為更進階且井然有序的應用程式打好基礎。</target>       </trans-unit>
         <trans-unit id="108" translate="yes" xml:space="preserve">
           <source>Using folders to organize code</source>
           <target state="translated">使用資料夾來組織程式碼</target>       </trans-unit>
